--- a/postman/schemas/index.yaml
+++ b/postman/schemas/index.yaml
@@ -2,7 +2,7 @@ openapi: '3.0.0'
 info:
   version: '1.0.0'
   title: 'Sample API'
-  description: Buy or rent spacecrafts Master branch
+  description: Buy or rent spacecrafts Master branch hello world
 
 paths:
   /spacecrafts/{spacecraftId}:
